--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1289,22 +1289,8 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Codes 57 to 60  <span class="label label-danger">Jeremiah, are we deleting these instructions</span></summary> 
- <p  id="cd_57-60">For the 2020 tax year <strong> only </strong>, additional reporting requirements will apply to all employers, and will help the CRA validate payments under the Canada Emergency Wage Subsidy (CEWS), the Canada Emergency Response Benefit (CERB), and the Canada Emergency Student Benefit (CESB).</p> 
-            <p>In addition to reporting employment income in Box 14 or Code 71, use new "Other information" codes when reporting employment income and retroactive payments in the following periods:</p>
-            <ul>
-            <li>Code 57 – Employment Income – March 15 to May 9, 2020</li>
-            <li>Code 58 – Employment Income – May 10 to July 4, 2020</li>
-            <li>Code 59 – Employment Income – July 5 to August 29, 2020</li>
-            <li>Code 60 – Employment Income – August 30 to September 26, 2020</li>
-            </ul>
-            <p>Eligibility criteria for the CERB, CEWS, and CESB is based on employment income for a defined period. The new requirement means employers should report income and any retroactive payments made during these periods.</p>
-            <p>Employers who have already filed their T4 slips and summary for 2020 will not need to refile.</p> 
-            <p>If you are reporting employment income for the period of April 25 to May 8, payable on May 14, use code 58.</p> 
-                      </details>
-</li>
-		
-<li class="code-num"><details><summary>Code 66 – Eligible retiring allowances <span class="label label-success">Good</span></summary> 
+	
+<li class="code-num"><details><summary>Code 66 – Eligible retiring allowances </summary> 
 <p  id="cd_66">Report eligible retiring allowances you paid in the year to your employee that are eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred using code 66. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
@@ -1318,7 +1304,7 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 67 – <span class="nowrap">Non-eligible</span> retiring allowances <span class="label label-success">Good</span></summary> 
+<li class="code-num"><details><summary>Code 67 – <span class="nowrap">Non-eligible</span> retiring allowances </summary> 
 <p id="cd_67">Report non-eligible retiring allowances you paid in the year to your employee that were <strong>not</strong> eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
@@ -1332,13 +1318,13 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 69 – Indian (exempt income) – Non-eligible retiring allowances  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 69 – Indian (exempt income) – Non-eligible retiring allowances  <span class="wb-inv">Keywords: Indians indigenous first nations</span> </summary> 
  <p id="cd_69">Report <strong>only</strong> tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>Partly tax-exempt non-eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><p>Report <strong>only</strong> tax exempt non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 <strong>and</strong> the taxable amount using <a href="#cd_67">code 67</a>.</p></dd>
+<dt>Partly tax-exempt non-eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv"> Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dd><p>Report the tax-exempt part of the retiring allowances you paid that are not eligible to be transferred using code 69 <strong>and</strong> the taxable part of the non-eligible retiring allowance using <a href="#cd_67">code 67</a>.</p></dd>
 <dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> </dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
@@ -1346,14 +1332,14 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 71 – Indian (exempt income) – Employment <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num"><details><summary>Code 71 – Indian (tax-exempt income) – Employment </summary>
        <p id="cd_71">Report <strong>only</strong> tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using code 71.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
   
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt </dt>
-<dd>Report <strong>only</strong> tax-exempt income using code 71 <strong>and</strong> the taxable income using <a href="#bx_14">box 14</a>.</dd>
+<dd>Report the tax-exempt part of their employment income using code 71 <strong>and</strong> the taxable part of their income using <a href="#bx_14">box 14</a>.</dd>
 <dt>Fully taxable</dt>
 <dd><strong>Do not</strong> report fully taxable income using code 71, use <a href="#bx_14">box 14</a>.</dd>
 </dl>
