--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1261,28 +1261,30 @@
 <li class="code-num"><details><summary>Code 39 – Security options deduction – 110(1)(d) <span class="label label-info">Jeremiah</span></summary> 
 <p id="cd_39">Report 50% of the value of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01) using code 39. If you report an amount in code 39, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
  <p><strong>Do not </strong>report this amount in box 14. </p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/security.html">Security (stock) options</a></p>
   </details> 
 			</li>
 
-<li class="code-num"><details><summary >Code 40 – Other taxable allowances and benefits <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary >Code 40 – Other taxable allowances and benefits </summary> 
 <p id="cd_40">Report the value of the taxable benefit you provided to your employee using code 40 <strong>and</strong> <a href="#bx_14">box 14</a> if the amount is <strong>not</strong> reported in other codes of the T4 slip.  </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 41 – Security options deduction – 110(1)(d.1) <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 41 – Security options deduction – 110(1)(d.1) </summary> 
 <p id="cd_41">Report 50% of the value of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d.1) using code 41. If you report an amount in code 41, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
            <p><strong>Do not </strong>report this amount in box 14. </p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/security.html">Security (stock) options</a></p>
   </details> 
 		</li>
 
-<li class="code-num"><details><summary>Code 42 – Employment commissions <span class="label label-success">Good</span></summary> 
+<li class="code-num"><details><summary>Code 42 – Employment commissions </summary> 
 <p  id="cd_42">Report amounts of commissions you paid to your employee who sold property or negotiated contracts for you using code 42 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>         
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 43 – Canadian Armed Forces personnel and police deduction <span class="label label-success">Good</span></summary> 
+<li class="code-num"><details><summary>Code 43 – Canadian Armed Forces personnel and police deduction </summary> 
 <p id="cd_43">Report employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code 043 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
  <p>For 2017 and subsequent taxation years, Canadian Armed Forces personnel and police officers deployed outside Canada can claim a deduction from net income for the amount of employment earnings <strong>they receive while serving on international operational missions </strong>as determined by the Minister of National Defence or by a person designated by that Minister. This is the case regardless of the risk associated with the mission. </p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-24400-canadian-forces-personnel-police-deduction.html">Canadian Armed Forces personnel and police deduction</a></p> 
