--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1243,7 +1243,7 @@
 
 
 <li class="code-num"><details> <summary>Code 38 – Security options benefits <span class="label label-info">Jeremiah</span></summary> 
-<p id="cd_38">Report the total value of the security options benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+<p id="cd_38">Report the total value of the security options taxable benefit you provided to your employee using code 38 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Security options deduction under 110(1)(d)</dt>
@@ -1258,9 +1258,16 @@
 			</li>
 
 
-<li class="code-num"><details><summary>Code 39 – Security options deduction – 110(1)(d) <span class="label label-info">Jeremiah</span></summary> 
-<p id="cd_39">Report 50% of the value of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) or under 110(1)(d.01) using code 39. If you report an amount in code 39, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
+<li class="code-num"><details><summary>Code 39 – Security options deduction – 110(1)(d) </summary> 
+<p id="cd_39">Report 50% of the value of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) using code 39. If you report an amount in code 39, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
  <p><strong>Do not </strong>report this amount in box 14. </p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Security options reported on Form T2-SCH 59</dt>
+<dd><strong>Do not </strong> report taxable benefits realized from security options you reported on Form T2-SCH 59, Information Return for Non-Qualified Securities (2021 and later tax years).</dd>
+</dl>
+
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/security.html">Security (stock) options</a></p>
   </details> 
 			</li>
