--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1192,7 +1192,7 @@
 			</li>
 
 
-<li class="code-num"><details><summary>Code 32 – Travel in a prescribed zone <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 32 – Travel in a prescribed zone </summary> 
           <p id="cd_32">Report the total value of the travel benefit you provided to your employee living in a prescribed zone using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1203,7 +1203,7 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 33 – Medical travel assistance <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 33 – Medical travel assistance </summary> 
             <p id="cd_33">Report the value of the <strong>medical travel portion only</strong> you provided to your employee living in a prescribed zone for medical travel assistance, using code 33 <strong>and</strong> the total value of the travel benefit using <a href="#cd_32">code 32</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14. </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
@@ -1211,7 +1211,7 @@
 			</li>
 	
 
-<li class="code-num"><details> <summary>Code 34 – Personal use of employer's automobile or motor vehicle <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details> <summary>Code 34 – Personal use of employer's automobile or motor vehicle </summary> 
   <p id="cd_34">Report the value of the automobile benefit for the personal driving of the automobiles or motor vehicles you provided to your employee using code 34 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1229,14 +1229,9 @@
 </li>
 
 
-<li class="code-num"><details> <summary>Code 36 – <span class="nowrap">Interest-free </span>and <span class="nowrap">low-interest </span>loans <span class="label label-info">Jeremiah</span></summary> 
-<p id="cd_36">Report the value of the interest-free and low interest benefit you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
- <h4>Specific situation</h4>
-<dl class="dl-horizontal">
-<dt>Forgiven or repayable awards</dt>
-<dd><strong>Do not </strong>report using code 36 if you paid interest on the benefit and your employee did not reimburse you in the year, use <a href="#cd_40">code 40</a>.
-</dd>
-</dl>   
+<li class="code-num"><details> <summary>Code 36 – Interest-free and low-interest loans </summary> 
+<p id="cd_36">Report the value of the taxable benefit from an interest-free and low interest loan you provided to your employee using code 36 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
 </details> 
 </li>
