--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1171,7 +1171,7 @@
 <h4>Other information</h4>		
  
  <li class="code-num"><details><summary>Code 30 – Board and lodging <span class="label label-info">Jeremiah</span></summary> 
-            <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>, and all other utilities not eligible using <a href="#cd_40">code 40</a>.</p>
+            <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
           <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Member of the clergy or of a religious order</dt>
@@ -1184,9 +1184,16 @@
 			</li>
 
 
-<li class="code-num"><details><summary>Code 31 – Special work site <span class="label label-info">Jeremiah</span></summary> 
-        <p id="cd_31">Report the value of the tax-exempt board, lodging and housing benefit paid to your employee working at  special work sites using code 31 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd_30">code 30</a>. </p>
+<li class="code-num"><details><summary>Code 31 – Special work site </summary> 
+        <p id="cd_31">Report the value of the tax-exempt board, lodging and housing benefit provided to your employee working at  special work site in a prescribed zone using code 31. </p>
+
 <p><strong>Do not </strong>report this amount in box 14. </p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Partly provided in a prescribed zone</dt>
+<dd>Report the tax-exempt part of the benefit using code 31 <strong>and</strong> the value of the board and lodging benefit that is not considered provided in a prescribed zone using <a href="#cd_30">code 30</a>.</dd>
+</dl>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
 			</li>
