--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1170,12 +1170,13 @@
 	
 <h4>Other information</h4>		
  
- <li class="code-num"><details><summary>Code 30 – Board and lodging <span class="label label-info">Jeremiah</span></summary> 
+ <li class="code-num"><details><summary>Code 30 – Board and lodging </summary> 
             <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
           <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Member of the clergy or of a religious order</dt>
-<dd><p>Report the total value of the housing benefit you provided to your employee who is a member of the clergy that is <strong>eligible </strong> part of your cost for those utilities (electricity, heat, water and sewer) using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>, and all other utilities not eligible using <a href="#cd_40">code 40</a>. </p>
+<dd><p>Report the total value of the housing benefit you provided to your employee who is a member of the clergy, including the part of your cost for the utilities that is <strong>eligible </strong> (electricity, heat, water and sewer) using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+ <p>Report all other utilities benefits that are <strong>not</strong> eligible that you provided to the employee using <a href="#cd_40">code 40</a>. </p>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/clergy.html">Housing and utilities expenses - Provided to a member of the clergy or of a religious order</a></p>
 </dd>
 </dl>
