--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1046,21 +1046,21 @@
             </details>
 		 </li>
 
-<li class="code-num"><details> <summary>Box 44 – Union dues <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num"><details> <summary>Box 44 – Union dues </summary>
             <p id="bx_44"></p>
-            <p>Report the amount you deducted from your employee for union dues, including amounts you paid to a parity or advisory committee that qualify for a deduction using box 44. </p>
+            <p>Report the amount you deducted from your employee for tax deductible union dues using box 44, only if you and the union agree that the union will not issue receipts for these dues. This includes amounts you paid to a parity or advisory committee that qualify for a deduction. </p>
                      
 <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Union issuing receipts</dt>
-<dd><p><strong>Do not</strong> report using box 44 if you and the union disagree that the union will </strong>not</strong> issue receipts. The union have to issue receipts (not a prescribed CRA form) to report the deductions. </p></dd>
+<dd><p><strong>Do not</strong> report union dues deductions using box 44 if you and the union do not have an agreement that the union will </strong>not</strong> issue receipts. The union will have to issue receipts for the employee to claim the income tax deduction. </p></dd>
 <dt>Initiation fees </dt>
-<dd><p><strong>Do not</strong> report using box 44 initiation fees </p></dd>
+<dd><p><strong>Do not</strong> report initiation fees using box 44. </p></dd>
 <dt>Strike pay</dt>
 <dd><p><strong>Do not</strong> report using box 44 <strong>strike pay</strong> the union paid to union members </p></dd>
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for union dues relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 44.</p>
-<p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report this amount using code box 44.</p>
+<p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report the amount related to their taxable income using box 44.</p>
 <p>Give your employee proof of the amounts of union dues for all tax-exempt income.</p>
 </dd>
 </dl>
