--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1102,17 +1102,17 @@
             </details>
            </li>
 		
-<li class="code-num">  <details><summary>Box 50 – RPP or DPSP registration number <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num">  <details><summary>Box 50 – RPP or DPSP registration number </summary>
          <p id="bx_50">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using box 50 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using <a href="#bx_52">box 52</a>.</p> 
 
-<p>You have to report the plan number even if your plan requires only employer contributions.</p>
+<p>You have to report the plan number even if your plan requires only employer contributions. If you make contributions to union pension funds, enter the unio's plan number.</p>
 
 <p>If you made contributions to <strong>more than one</strong> plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
             </details>
            </li>
 
 <li class="code-num"><details><summary>Box 52 – Pension adjustment <span class="label label-info">Jeremiah</span></summary>
-         <p id="bx_52">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services using box 52. If you report an amount in box 52, you have to enter the plan registration number using <a href="#bx_50">box 50</a>.</p>
+         <p id="bx_52">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has under a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) or a deferred profit sharing plan (<abbr title="Deferred profit sharing plan ">DPSP</abbr>) using box 52. If you report an amount in box 52, you have to enter the plan registration number using <a href="#bx_50">box 50</a>.</p>
 
  <h4>Specific situations </h4>
 <dl class="dl-horizontal">
