--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -323,7 +323,7 @@
                         </tr>  
                       
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/taxis-drivers-drivers-other-passenger-carrying-vehicles.html">Payments to taxi and other passenger-carrying drivers</a> </td>
+                           <td><a href="taxi.html">Payments to taxi and other passenger-carrying drivers</a> </td>
                            <td>Type of employment </td>
                         </tr>
                        
