--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -297,7 +297,7 @@
                            <td>Type of employment </td>
                         </tr>
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/placement-employment-agency-workers.html">Payments to employee of an employment agency (temporary-help)</a> </td>
+                           <td><a href="temp-help.html">Payments to employee of an employment agency (temporary-help)</a> </td>
                            <td>Type of employment </td>
                         </tr>
                         <tr>
