--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -950,20 +950,25 @@
             </ul>
 <p>Also use code 11 if you are a placement or employment agency who pays a worker that you place under the direction and control  of one of your clients.</p>
   <p><strong>Do not</strong> use code 11 if you are an agency or the agency's client and the worker is paid self-employment income, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Payments to employee of an employment agency (temporary-help)</a></p>
+            <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/temp-help.html">Payments to employee of an employment agency (temporary-help)</a></p>
                      
 	    </div></details>
 
 
       <details><summary>12 - Self-employed taxi drivers and drivers of other passenger-carrying vehicles</summary>
-               <div id="ajax-self1">
-                  <p id="12">If the worker is <strong>self-employed</strong>:</p>
+               <div id="ajax-taxi1">
+                  <p id="12">Use code 12 if both of the following apply:</p>
                   <ul>
-                     <li>they are responsible for their own CPP and income tax </li>
-                     <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
-                     <li>you have to file a T4 slip to show EI and PPIP premiums remitted on their behalf </li>
-                  </ul>
- <p>Learn more: <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a></p>
+                     <li>The driver does not own more than 50% of the vehicle </li>
+                     <li>The driver does not own or operate a business</li>
+                    </ul>
+   <p >A driver is considered to be the owner/operator if both of the following apply:</p>
+                  <ul>
+                     <li>The driver is in a position to gain a profit or risk a loss from operating the taxi business </li>
+                     <li>The has the right to operate a taxicab</li>
+                    </ul>
+
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/taxi.html">Payments to taxi and other passenger-carrying drivers</a></p>
  </div></details>
 
  <details><summary>13 - Self-employed barbers and hairdressers</summary>
@@ -1439,7 +1444,7 @@
 			</li>
 
 <li class="code-num"><details> <summary>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income </summary> 
-<p id="cd_82">Report the gross income you paid to a self-employed taxi drivers and drivers of other passenger-carrying vehicles using code 82. If you report an amount in code 82, you have to enter the employment code 12 using <a href="#12">box 29</a>.</p>
+<p id="cd_82">Report the gross income you paid to a <a href="#ajax-taxi1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed taxi drivers and drivers of other passenger-carrying vehicles&nbsp;<span class="far fa-question-circle"></span></a> using code 82. If you report an amount in code 82, you have to enter the employment code 12 using <a href="#12">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
             </details> 
@@ -1512,24 +1517,27 @@
             </section>
 
 
-            <section id="self1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
+            <section id="taxi1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
+            <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code Self-employed taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
             <div class="modal-body">
-            <div data-ajax-replace="#ajax-self1"></div>
+            <div data-ajax-replace="#ajax-taxi1"></div>
             </div>
             </section>  
+
             <section id="fish1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
             <header class="modal-header"><h2 class="modal-title">Self-employed fishing income</h2></header>
             <div class="modal-body">
             <div data-ajax-replace="#ajax-fish1"></div>
             </div>
             </section> 
-            <section id="agency1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
+           
+ <section id="agency1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
             <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code 11 - Placement or employment agency workers</h2></header>
             <div class="modal-body">
             <div data-ajax-replace="#ajax-agency1"></div>
             </div>
             </section> 
+
             <section id="defer1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
             <header class="modal-header"><h2 class="modal-title">Salary deferral arrangements</h2></header>
             <div class="modal-body">
