--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1437,14 +1437,14 @@
 	
 <li class="code-num"><details><summary>Code 81 – Placement or employment agency worker – Gross income </summary> 
           
- <p id="cd_81">Report the gross income you paid to a <a href="#ajax-agency1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed placement or employment agency worker&nbsp;<span class="far fa-question-circle"></span></a> using code 81. If you report an amount in code 81, you have to enter the employment code 11 using <a href="#11">box 29</a>.</p>
+ <p id="cd_81">Report the gross income you paid to a <a href="#agency1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed placement or employment agency worker&nbsp;<span class="far fa-question-circle"></span></a> using code 81. If you report an amount in code 81, you have to enter the employment code 11 using <a href="#11">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
              </details> 
 			</li>
 
 <li class="code-num"><details> <summary>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income </summary> 
-<p id="cd_82">Report the gross income you paid to a <a href="#ajax-taxi1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed taxi drivers and drivers of other passenger-carrying vehicles&nbsp;<span class="far fa-question-circle"></span></a> using code 82. If you report an amount in code 82, you have to enter the employment code 12 using <a href="#12">box 29</a>.</p>
+<p id="cd_82">Report the gross income you paid to a <a href="#taxi1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed taxi drivers and drivers of other passenger-carrying vehicles&nbsp;<span class="far fa-question-circle"></span></a> using code 82. If you report an amount in code 82, you have to enter the employment code 12 using <a href="#12">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
             </details> 
@@ -1517,7 +1517,7 @@
             </section>
 
 
-            <section id="taxi1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
+            <section id="taxi1" class="mfp-hide modal-dialog modal-content overlay-def">
             <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code Self-employed taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
             <div class="modal-body">
             <div data-ajax-replace="#ajax-taxi1"></div>
