--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -950,7 +950,7 @@
             </ul>
 <p>Also use code 11 if you are a placement or employment agency who pays a worker that you place under the direction and control  of one of your clients.</p>
   <p><strong>Do not</strong> use code 11 if you are an agency or the agency's client and the worker is paid self-employment income, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/temp-help.html">Payments to employee of an employment agency (temporary-help)</a></p>
+            <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/temp-help.html">Payments to employee of an employment agency (temporary-help)</a></p>
                      
 	    </div></details>
 
@@ -962,13 +962,13 @@
                      <li>The driver does not own more than 50% of the vehicle </li>
                      <li>The driver does not own or operate a business</li>
                     </ul>
-   <p >A driver is considered to be the owner/operator if both of the following apply:</p>
+   <p class="mrgn-tp-md">A driver is considered to be the owner/operator if both of the following apply:</p>
                   <ul>
                      <li>The driver is in a position to gain a profit or risk a loss from operating the taxi business </li>
                      <li>The has the right to operate a taxicab</li>
                     </ul>
 
- <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/taxi.html">Payments to taxi and other passenger-carrying drivers</a></p>
+ <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/taxi.html">Payments to taxi and other passenger-carrying drivers</a></p>
  </div></details>
 
  <details><summary>13 - Self-employed barbers and hairdressers</summary>
