--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -284,7 +284,7 @@
                         </tr>
 
                         <tr>
-                           <td> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/barbers-hairdressers.html">Payments to barbers and hairdressers</a>
+                           <td> <a href="barbers.html">Payments to barbers and hairdressers</a>
  			 </td>
                            <td>Type of employment </td>
                         </tr>
