--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -972,14 +972,14 @@
  </div></details>
 
  <details><summary>13 - Self-employed barbers and hairdressers</summary>
-               <div id="ajax-self2">
-                  <p id="13">If the worker is <strong>self-employed</strong>:</p>
+               <div id="ajax-barbers">
+                  <p id="13">Use code 13 if both of the following apply:</p>
                   <ul>
-                     <li>they are responsible for their own CPP and income tax </li>
-                     <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
-                     <li>you have to file a T4 slip to show EI and PPIP premiums remitted on their behalf </li>
+                     <li>??? </li>
+                     <li>??? </li>
+                     <li>???</li>
                   </ul>
- <p>Learn more: <a href="#self">Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</a></p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/barbers.html">Payments to barbers and hairdressers</a></p>
  </div></details>
 
    <details> <summary>14 -  Withdrawal from a prescribed salary deferral arrangement plan</summary>
@@ -1392,7 +1392,7 @@
 </li>
 		
 <li class="code-num"><details><summary >Code 78 – Fishers – Gross income </summary> 
-            <p id="cd_78">Report the gross income you paid to a fisher using code 78. If you report an amount in code 78, you have to enter the employment code 17 using <a href="#17">box 29</a>. </p>
+            <p id="cd_78">Report the gross income you paid to a <a href="#fish1" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed fisher&nbsp;<span class="far fa-question-circle"></span></a> using code 78. If you report an amount in code 78, you have to enter the employment code 17 using <a href="#17">box 29</a>. </p>
 
 <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -1451,7 +1451,7 @@
 			</li>
 
 <li class="code-num"><details> <summary>Code 83 – Barbers or hairdressers – Gross income </summary> 
-<p id="cd_83">Report the gross income you paid to a self-employed barbers or hairdressers using code 83. If you report an amount in code 83, you have to enter the employment code 13 using <a href="#13">box 29</a>.</p>
+<p id="cd_83">Report the gross income you paid to a <a href="#barbers" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed barbers or hairdressers&nbsp;<span class="far fa-question-circle"></span></a> using code 83. If you report an amount in code 83, you have to enter the employment code 13 using <a href="#13">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
 
@@ -1518,14 +1518,21 @@
 
 
             <section id="taxi1" class="mfp-hide modal-dialog modal-content overlay-def">
-            <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code Self-employed taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
+            <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code 12 - Self-employed taxi drivers and drivers of other passenger-carrying vehicles</h2></header>
             <div class="modal-body">
             <div data-ajax-replace="#ajax-taxi1"></div>
             </div>
             </section>  
+ 
+	<section id="barbers" class="mfp-hide modal-dialog modal-content overlay-def">
+            <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code 13 - Self-employed barbers and hairdressers</h2></header>
+            <div class="modal-body">
+            <div data-ajax-replace="#ajax-barbers"></div>
+            </div>
+            </section>  
 
             <section id="fish1" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">Self-employed fishing income</h2></header>
+            <header class="modal-header"><h2 class="modal-title">Box 29 - Employment code 17 - Self-employed fishing income</h2></header>
             <div class="modal-body">
             <div data-ajax-replace="#ajax-fish1"></div>
             </div>
