--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -948,7 +948,7 @@
 	  <li>The pay the worker</li>
             <li>The worker is not the agency's employee </li>
             </ul>
-<p>Also use code 11 if you are a placement or employment agency who pays a worker that you place under the direction and control  of one of your clients.</p>
+<p class="mrgn-tp-md">Also use code 11 if you are a placement or employment agency who pays a worker that you place under the direction and control  of one of your clients.</p>
   <p><strong>Do not</strong> use code 11 if you are an agency or the agency's client and the worker is paid self-employment income, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>.</p>
             <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/temp-help.html">Payments to employee of an employment agency (temporary-help)</a></p>
                      
@@ -1010,21 +1010,9 @@
 
      <details><summary>17 - Self-employed fishing income</summary>
                <div id="ajax-fish1">
-                  <p id="17">Fishing income is reported on a T4 slip. If you paid:</p>
-                  <ul>
-                     <li>the worker both self-employed and employment income, and are reporting both on the same T4 slip, use the regular instructions for the portion that is employment income. </li>
-                     <li>tax-exempt fishing income to a self-employed Indian, see <a href="#indian1">Indians employees</a>. </li>
-                  </ul>
-                  <p>If the worker is <strong>self-employed</strong>:</p>
-                  <ul>
-                     <li>they are responsible for their own CPP and income tax </li>
-                     <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
-                     <li>you have to file a T4 slip to show EI and PPIP premiums remitted on their behalf </li>
-                  </ul>
-                  <p>Fishing income (for example, proceeds of the catch paid to a self-employed fisher) and employment income (for example, plant income) can be reported on the same T4 slip or on separate T4 slips. </p>
-                  <h4>Cash and accrual methods of accounting</h4>
-                  <p>Whether you report self-employed fisher income that is payable or paid depends on whether you are using the cash method or accrual method of accounting. </p>
-                  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/farmers-fishers/reporting-income-loss-farmers-fishers.html">Reporting income and loss &ndash; farmers and fishers</a></p>
+                  <p id="17">Use code 17 if the worker meets all conditions to be a self-employed fisher.</p>
+                                
+                  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/fishers-employment-insurance-ei.html#P92_5141">What is a self-employed fisher?</a></p>
 
 </div></details>
 
