--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1012,8 +1012,7 @@
                <div id="ajax-fish1">
                   <p id="17">Use code 17 if the worker meets all conditions to be a self-employed fisher.</p>
                                 
-                  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/fishers-employment-insurance-ei.html#P92_5141">What is a self-employed fisher?</a></p>
-
+                  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fishers.html">Payments to fishers</a> </p>
 </div></details>
 
 <details><summary>12, 13 or 17 - Indians who are self-employed</summary>
